<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/drivesFragment"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_drives" />
    <item
        android:id="@+id/filesFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_files" />
    <item
        android:id="@+id/transfersFragment"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_transfers" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
